Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51358

When a function is under a namespace then this will not show up under the index for Qt Assistant

    XMLWordPrintable

Details

    Description

      When a function is under a namespace then this will not show up under the index for Qt Assistant. It is listed in the index file correctly, but cannot be found when trying to type it in the index.

      For example: convertFromPlainText (in the Qt Namespace) or blockingFilter (in the QtConcurrent Namespace) have documentation but are not listed when typing it in the index search.

      Attachments

        For Gerrit Dashboard: QTBUG-51358
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes